# c4c

./: .gitignore  .gitmodules  AGENTS.md  AGENT_PROMPT.md  AGENT_PROMPT_ISSUE.md  AGENT_PROMPT_PLAN.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  MLIR_vs_cpp.md  README.md  ast_refactor_plan.md  c2ll.py  c4_cpp_mode_plan.md  c4feature.md  canonical_type_plan.md  clangtest_plan_todo.md  cpp_consteval_plan.md  cpp_template_plan.md  example.c  hir_refactor_plan.md  inline_plan.md  known_issues.md  namespace_plan.md  operator_overload_plan.md  plan.md  plan_todo.md  preprocess_plan.md  preprocessor_plan.md  range_for_plan.md  refactor_plan.md  rvalue_ref_plan.md  stl_plan.md  support_std_vector_plan.md  todo.md  todoA.md  todoB.md  todoC.md  (+1 more)
src/backend/: CMakeLists.txt  README.md  asm_expr.cpp  asm_preprocess.cpp  backend.cpp  backend.hpp  bir.cpp  bir.hpp  bir_printer.cpp  bir_validate.cpp  bir_validate.hpp  call_abi.cpp  cast.cpp  common.cpp  elf_writer_common.cpp  f128_softfloat.cpp  f128_softfloat.hpp  generation.cpp  generation.hpp  inline_asm.cpp  ir.cpp  ir.hpp  ir_printer.cpp  ir_printer.hpp  ir_validate.cpp  ir_validate.hpp  lir_adapter.cpp  lir_adapter.hpp  liveness.cpp  liveness.hpp  mod.cpp  peephole_common.cpp  regalloc.cpp  regalloc.hpp  state.cpp  target.cpp  target.hpp  traits.cpp  x86_common.cpp
src/codegen/: CMakeLists.txt
src/frontend/: CMakeLists.txt  arena.cpp  arena.hpp  ast_nodes.py  builtin.hpp  c2ll.py  driver.cpp  driver_stage2.cpp  lexer.py  sema.py  source_profile.hpp  string_id_table.hpp
tests/: CMakeLists.txt  TestEntry.cmake  c_testsuite_allowlist.txt  frontend_cxx_preprocessor_tests.cpp  llvm_gcc_c_torture_allowlist.txt  llvm_gcc_c_torture_frontend_failures.tsv  run_c_testsuite.py  run_ccc_review_tests.py  run_tests.py  verify_external_clang_case.py
tests/backend/: CMakeLists.txt  OWNERSHIP.md  backend_aarch64_branch_compare_contract_test.cpp  backend_aarch64_branch_compare_records_test.cpp  backend_aarch64_compare_branch_candidate_records_test.cpp  backend_aarch64_machine_printer_test.cpp  backend_aarch64_memory_operand_contract_test.cpp  backend_aarch64_memory_operand_records_test.cpp  backend_aarch64_prepared_branch_records_test.cpp  backend_aarch64_prepared_frame_control_test.cpp  backend_aarch64_prepared_handoff_gate_test.cpp  backend_aarch64_prepared_memory_operand_records_test.cpp  backend_aarch64_prepared_module_identity_test.cpp  backend_aarch64_prepared_operand_identity_test.cpp  backend_aarch64_prepared_register_conversion_test.cpp  backend_aarch64_prepared_scalar_alu_records_test.cpp  backend_aarch64_prepared_scalar_cast_records_test.cpp  backend_aarch64_register_vocabulary_test.cpp  backend_aarch64_scalar_alu_records_test.cpp  backend_aarch64_scalar_cast_records_test.cpp  backend_aarch64_scalar_record_contract_test.cpp  backend_aarch64_signature_metadata_test.cpp  backend_aarch64_target_instruction_records_test.cpp  backend_aarch64_target_operand_records_test.cpp  backend_aarch64_target_record_core_contract_test.cpp  backend_bir_lowering_tests.cpp  backend_bir_pipeline_aarch64_tests.cpp  backend_bir_pipeline_riscv64_tests.cpp  backend_bir_pipeline_tests.cpp  backend_bir_pipeline_x86_64_tests.cpp  backend_bir_test_support.cpp  backend_bir_test_support.hpp  backend_bir_tests.cpp  backend_header_boundary_tests.cpp  backend_ir_tests.cpp  backend_lir_adapter_aarch64_tests.cpp  backend_lir_adapter_tests.cpp  backend_lir_adapter_x86_64_tests.cpp  backend_lir_to_bir_notes_test.cpp  backend_module_tests.cpp  (+30 more)
tests/ccc-review-tests/: 0001_binary_literal.c  0002_hex_float_literal.c  0003_dot_float_literal.c  0004_unicode_escape_string.c  0005_unicode_escape_char.c  0006_dollar_identifier.c  0007_line_marker.c
tests/cmake/: prune_llvm_gcc_c_torture_allowlist_to_failed.cmake  run_c_testsuite_case.cmake  run_ccc_review_case.cmake  run_llvm_gcc_c_torture_case.cmake  run_tiny_c2ll_positive_case.cmake  run_tiny_c2ll_tests.cmake
tests/frontend/: CMakeLists.txt  cpp_hir_member_typedef_binding_metadata_test.cpp  cpp_hir_member_typedef_nested_readiness_metadata_test.cpp  cpp_hir_member_typedef_origin_binding_metadata_test.cpp  cpp_hir_member_typedef_readiness_metadata_test.cpp  cpp_hir_member_typedef_realized_owner_metadata_test.cpp  cpp_hir_nested_member_typedef_record_def_metadata_test.cpp  cpp_hir_parser_core_nominal_typespec_metadata_test.cpp  cpp_hir_parser_core_producer_metadata_test.cpp  cpp_hir_parser_core_record_ctor_metadata_test.cpp  cpp_hir_parser_core_struct_like_typedef_metadata_test.cpp  cpp_hir_parser_core_typedef_chain_metadata_test.cpp  cpp_hir_parser_declarations_residual_metadata_test.cpp  cpp_hir_parser_declarator_deferred_owner_metadata_test.cpp  cpp_hir_parser_expressions_residual_metadata_test.cpp  cpp_hir_parser_member_typedef_lookup_metadata_test.cpp  cpp_hir_parser_support_residual_metadata_test.cpp  cpp_hir_parser_type_base_alias_member_substitution_metadata_test.cpp  cpp_hir_parser_type_base_deferred_member_template_origin_metadata_test.cpp  cpp_hir_parser_type_base_instantiated_deferred_member_metadata_test.cpp  cpp_hir_parser_type_base_member_substitution_metadata_test.cpp  cpp_hir_parser_type_base_pending_base_substitution_metadata_test.cpp  cpp_hir_parser_type_base_prelim_eval_metadata_test.cpp  cpp_hir_parser_type_base_producer_metadata_test.cpp  cpp_hir_parser_type_base_record_enum_producer_metadata_test.cpp  cpp_hir_parser_type_base_residual_metadata_test.cpp  cpp_hir_parser_type_helper_metadata_test.cpp  cpp_hir_parser_type_helper_residual_metadata_test.cpp  cpp_hir_sema_canonical_symbol_metadata_test.cpp  cpp_hir_sema_consteval_type_utils_metadata_test.cpp  cpp_hir_sema_lookup_value_metadata_test.cpp  cpp_hir_static_member_base_metadata_test.cpp  cpp_hir_template_canonical_primary_origin_metadata_test.cpp  cpp_hir_template_parameter_binding_key_test.cpp  cpp_hir_template_pattern_match_metadata_test.cpp  cpp_hir_template_realize_struct_metadata_test.cpp  cpp_hir_template_recover_identity_metadata_test.cpp  cpp_hir_template_type_arg_encoding_test.cpp  frontend_hir_lookup_tests.cpp  (+9 more)
(+5030 files in other folders)
